but could be used on other types of continuous omics data such as proteomics data.
- default color changed for bmdplotwithgradient() (green replaced by blue for 
color blind people)
- Removing of three of the four datasets from Zou et al. 2017 to make the 
package lighter
- Add a test on residuals for heteroscedasticity and an output of drcfit: 
residualtests

Version 2.1-0 
=============
NEW FEATURES
- Add of the function bmdplotwithgradient()
- Add of the function ecdfquantileplot()
- Add of an argument named information.criterion in drcfit() to choose 
the use of AIC or BIC for the best fit model selection process.
- Add of the possibility to enter data as an R object of class data.frame
- Add of published datasets (Zhou et al. 2017, Larras etal. 2020) and 
corresponding help pages
- Add of function continuousanchoringdata and modification of itemselect()
to enable the selection of significant responses on continuous anchoring data.
- Add an argument dose_log_transfo in plot.drcfit to enable the use of
log tranformation of the x-axis.
- Add an element in the list of drcfit() output : unfitres giving some 
information on selected items for which the modelling step is not successful
- Add of a function to plot raw data on target items optionally with fitted curves 
for items which have be selected in step 2 and for which step 3 was successful
(new function targetplot()).
- Add of the argument transfo.blind in RNAseqdata() 
- Add of the argument free.y.scales in curvesplot() to enable free y scales in facets
and dose_log_transfo to use an x log scale for plot and calculation of signal.
- Add of examples in DRomics.Rd to help a multi-omics approach
- Add of the argument round.counts to enable rounding of read counts that would come
from Kallisto or Salmon.

BUG FIXES
- make the direct use of varianceStabilizingTransformation() automatic